--- a/src/style/Player.css
+++ b/src/style/Player.css
@@ -15,7 +15,21 @@
     height: 400px;
     background-repeat: no-repeat !important;
     background-size:400px !important;
+    border-radius: 50%;
+    animation: coverRotate 4s linear infinite;
+    position: relative;
 }
+.musicCover::after{
+    content: '';
+    position: absolute;
+    width: 50px;
+    height: 50px;
+    top:175px;
+    left: 175px;
+    background-color: white;
+    border-radius: 50%;
+}
+
 
 .musicInfo{
     display: flex;
@@ -28,4 +42,9 @@
 
 .musicInfo audio{
     margin: auto;
+}
+
+@keyframes coverRotate {
+    from {transform: rotate(0deg)}
+    to { transform: rotate(360deg)}
 }
